--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
 #  bloc: ^8.1.4
   flutter_bloc: ^8.1.6
+  test:
+  bloc_test: ^9.1.7
+  equatable:
 
 dev_dependencies:
   flutter_test:
